* Fri Aug 24 2007 Jesse Keating <jkeating@redhat.com>
- Remove a lot of configurable items and hard set them
- Move some items to cli flags only (part of moving to pykickstart)
- make "product_name" "name" instead.  KISS
- hard set product_path to 'Packages'

* Thu Aug 23 2007 Jesse Keating <jkeating@redhat.com>
- Add a source config for the Fedora spin

* Tue Aug 21 2007 Jesse Keating <jkeating@redhat.com>
- Rework how source rpms are pulled in
  Always pull in 'src' arch packages, just filter them
  when not needed.  Saves having to reset or create new
  yum objects.

* Wed Aug 15 2007 Jesse Keating <jkeating@redhat.com>
- Create a base pungi class that sets logging
- Inherit this class in Gather and Pungi
- Adjust logging to make use of new facility, use right levels
- Drop a note when all done with composing

* Wed Aug 08 2007 Jesse Keating <jkeating@redhat.com>
- Make Gather() no longer a subclass of yum
- We set debuglevel when creating the yum object.
- Be verbose about what we clean
- Create a subclass of yum to work around logging fun

* Wed Aug 01 2007 Jesse Keating <jkeating@redhat.com>
- Create a new yum object for source downloads as yum

* Sat Jul 28 2007 Jesse Keating <jkeating@redhat.com>
- Split the createrepo call into it's own function
- When raising an error, print the error too.

* Tue Jul 24 2007 Jesse Keating <jkeating@redhat.com>
- Add a few more desktopy things to manifest
- Rename f7 files to f8; set up config files for f8test1

* Fri Jul 20 2007 Jesse Keating <jkeating@redhat.com>
- Don't quote things passed to mkisofs, not a shell
- Always log stdout before checking for stderr output

* Fri Jul 06 2007 Jesse Keating <jkeating@redhat.com>
- Include memtest86+ in the "Fedora" manifest

* Tue Jun 19 2007 Jesse Keating <jkeating@redhat.com>
- Only grab the newest of deps.

* Wed Jun 13 2007 Jesse Keating <jkeating@redhat.com>
- Don't use flavor for a log file if no flavor set (Trac #48)
- Point to the right manifest file in pungi.conf
