@@ -3,6 +3,7 @@
 - Move some items to cli flags only (part of moving to pykickstart)
 - make "product_name" "name" instead.  KISS
 - hard set product_path to 'Packages'
+- Use group metadata from repos instead of our own comps file
 
 * Thu Aug 23 2007 Jesse Keating <jkeating@redhat.com>
 - Add a source config for the Fedora spin
